# creators-factory

./: .gitignore  README.md  agents.md  code.html  package.json  pnpm-lock.yaml  turbo.json
.turbo/cache/: 6fb5d0e215c68443-manifest.json  6fb5d0e215c68443-meta.json  6fb5d0e215c68443.tar.zst
Planning/Page-Level/: Automations.md  Dashboard.md  Industries.md  Onboarding.md  README.md  Settings.md  Videos.md
Planning/Pre-Production/: Decisions.md
backend/: .env.example  mypy.ini  pyproject.toml  pyrightconfig.json
backend/migrations/: 001_add_visual_tables.sql  002_avatar_phase1_hardening.sql
backend/scripts/: init_db.py  normalize_avatar_state.py
backend/src/: main.py
backend/src/core/: config.py  database.py  exceptions.py  prompts.py  security.py
backend/src/modules/auth/: router.py
backend/src/modules/automations/: models.py  router.py
backend/src/modules/avatars/: __init__.py  models.py  router.py  schemas.py
backend/src/modules/avatars/domain/: __init__.py  permissions.py  state_machine.py
backend/src/modules/industries/: __init__.py  models.py  router.py
backend/src/modules/organizations/: models.py
backend/src/modules/recycle_bin/: __init__.py  router.py
backend/src/modules/users/: models.py
backend/src/services/ai/: __init__.py  fal_service.py  media_service.py  prompt_templates.py
backend/tests/: test_api.py  test_auth_integration.py  test_avatars_contract.py  test_prompts.py
docs/: auth-health-check.md
frontend/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
rebuild-starter/: README.md
(+286 files in other folders)
